# INF273-Project

./: .gitignore  CMakeLists.txt  README.md  build.bat
deliverables/Assigment 1/: Assignment 1.tex
deliverables/Assignment 1/: Assignment 1.tex
deliverables/Assignment 2/: Assignment 2.tex  results.txt
deliverables/Assignment 3/: Assignment 3.tex  results_ls.txt  results_sa.txt
deliverables/Assignment 4/Delivery 1/: Assignment 4.tex  results_uniform.txt  results_weighted.txt
deliverables/Assignment 4/Delivery 2/: Assignment 4.tex  results_uniform.txt  results_weighted.txt
deliverables/Assignment 4/Final Delivery/: Assignment 4.tex  results_uniform.txt  results_weighted.txt
deliverables/Assignment 5/: Assignment 5.tex  results.txt
deliverables/Final Assignment/: Final Assignment.tex  results_final.txt  results_full.txt
src/: debug.cpp  debug.h  heuristics.cpp  main.cpp  obsolete_solution.cpp  operator.cpp  parser.cpp  parser.h  problem.h  solution.cpp  solution.h  testcase.cpp  timer.cpp
src/headers/: debug.h  heuristics.h  obsolete_solution.h  operator.h  parser.h  problem.h  solution.h  testcase.h  timer.h
